<resources>
    <string name="app_name">FirebaseTaskAppKaushal</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_class_room">Select class room</string>
    <string name="save">Save</string>
    <string name="save_error">Data not saved successfully</string>
    <string name="fetch_error">No data found</string>
    <string name="first_name">First name: %s</string>
    <string name="last_name">Last name: %s</string>
    <string name="age">Age: %d</string>
    <string name="classroom">Classroom: %s</string>
    <string name="gender">Gender: %s</string>
    <string name="user_info">User Info</string>
    <string name="retry">Retry</string>
    <string name="profile_image">Profile image</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="data_success_msg">Data added successfully</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_lastname">Please enter lastname</string>
    <string name="please_enter_age">Please enter age</string>
</resources>